--- a/02_Week_vector_search/vector_search_qdrant.ipynb
+++ b/02_Week_vector_search/vector_search_qdrant.ipynb
@@ -395,7 +395,8 @@
     "- Multimoda, Para texto e imágenes, pero no es necesario impágenes, descartado\n",
     "\n",
     "El modelo 3: `jinaai/jina-embeddings-v2-small-en`\n",
-    "- El más adecuado descartando los previos"
+    "- El más adecuado descartando los previos\n",
+    "- [Documentación del modelo usado para embedding](https://huggingface.co/jinaai/jina-embeddings-v2-small-en)"
    ]
   },
   {
@@ -407,7 +408,49 @@
    "source": [
     "modelo_seleccionado= \"jinaai/jina-embeddings-v2-small-en\"\n",
     "\n",
-    "# Este modelo como muchos, fue entrenado usando similitud de coseno\n"
+    "# Este modelo como muchos, fue entrenado usando similitud de coseno"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a91408d3",
+   "metadata": {},
+   "source": [
+    "Ahora ya estamos listos para configurar los parámetros del modelo con **Qdrant** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eb77b84",
+   "metadata": {},
+   "source": [
+    "## 4. Configuración con Qdrant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2c69fda",
+   "metadata": {},
+   "source": [
+    "### Creación de una colección:\n",
+    "Debemos definir:\n",
+    "- Nombre\n",
+    "- Configuración del vector: \n",
+    "    -  Size, dimensionalidad del vector\n",
+    "    - Distance Metric: el método para medir la similitud entre vectores\n",
+    "    Tipo de métodos: dot, cosine Euclid, manhatthan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49785bb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastembed import TextEmbedding\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -419,13 +462,6 @@
    "source": [
     "# ejemplo fastembed\n",
     "from fastembed import TextEmbedding\n",
-    "\n",
-    "\n",
-    "# Example list of documents\n",
-    "documents: list[str] = [\n",
-    "    \"This is built to be faster and lighter than other embedding libraries e.g. Transformers, Sentence-Transformers, etc.\",\n",
-    "    \"fastembed is supported by and maintained by Qdrant.\",\n",
-    "]\n",
     "\n",
     "# This will trigger the model download and initialization\n",
     "embedding_model = TextEmbedding()\n",
