--- a/02_Week_vector_search/vector_search_qdrant.ipynb
+++ b/02_Week_vector_search/vector_search_qdrant.ipynb
@@ -38,17 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "e2c867a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from qdrant_client import QdrantClient, models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "50d56c3f",
    "metadata": {},
    "outputs": [],
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "be548526",
    "metadata": {},
    "outputs": [],
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "13cd39bf",
    "metadata": {},
    "outputs": [
@@ -215,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4f0178f3",
    "metadata": {},
    "outputs": [
@@ -279,7 +288,7 @@
        "  'tasks': {}}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,17 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "b876107f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "66d4bf95",
    "metadata": {},
    "outputs": [
@@ -401,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cfa0e0e8",
    "metadata": {},
    "outputs": [],
@@ -443,56 +442,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "49785bb6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from fastembed import TextEmbedding\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed2a17fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ejemplo fastembed\n",
-    "from fastembed import TextEmbedding\n",
-    "\n",
-    "# This will trigger the model download and initialization\n",
-    "embedding_model = TextEmbedding()\n",
-    "print(\"The model BAAI/bge-small-en-v1.5 is ready to use.\")\n",
-    "\n",
-    "embeddings_generator = embedding_model.embed(documents)  # reminder this is a generator\n",
-    "embeddings_list = list(embedding_model.embed(documents))\n",
-    "  # you can also convert the generator to a list, and that to a numpy array\n",
-    "len(embeddings_list[0]) # Vector of 384 dimensions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "5bef4421",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'data-engineering-zoomcamp'"
+       "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# from qdrant_client import QdrantClient, models\n",
+    "# client = QdrantClient(url=\"http://localhost:6333\")\n",
     "\n",
-    "documentos[0]['course']"
+    "nombre_coleccion= 'zoomcamp-rag'\n",
+    "client.create_collection(\n",
+    "    collection_name= nombre_coleccion, \n",
+    "    vectors_config=models.VectorParams(\n",
+    "        size= dimension, \n",
+    "        distance= models.Distance.COSINE\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "905ca9ad",
+   "metadata": {},
+   "source": [
+    "### Crear e insertar Points en la Colección\n",
+    "Recordar que la definción de un Point es `P(ID, vector, payload(opcional))`\n",
+    "Explicación más detallada en [set_up_qdrant]()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3c32e861",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jinaai/jina-embeddings-v2-small-en'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelo_seleccionado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc7b77ea",
+   "metadata": {},
+   "source": [
+    "Creación de puntos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b570feda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# para almacenar los puntos\n",
+    "points= []\n",
+    "id=0 #por defecto el identificador de los puntos 0 \n",
+    "\n",
+    "for i in documentos:\n",
+    "    for j in i['documents']: # text-section -question\n",
+    "        # print(j)\n",
+    "        point = models.PointStruct(\n",
+    "            id= id, \n",
+    "            vector= models.Document(text= j['text'], model= modelo_seleccionado), \n",
+    "            payload= {\n",
+    "                \"text\": j['text'], \n",
+    "                \"section\":j['section'], \n",
+    "                \"course\": i['course']\n",
+    "            }\n",
+    "        )\n",
+    "        points.append(point)\n",
+    "        id +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7d2a0e4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PointStruct(id=0, vector=Document(text=\"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\", model='jinaai/jina-embeddings-v2-small-en', options=None), payload={'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\", 'section': 'General course-related questions', 'course': 'data-engineering-zoomcamp'}),\n",
+       " PointStruct(id=1, vector=Document(text='GitHub - DataTalksClub data-engineering-zoomcamp#prerequisites', model='jinaai/jina-embeddings-v2-small-en', options=None), payload={'text': 'GitHub - DataTalksClub data-engineering-zoomcamp#prerequisites', 'section': 'General course-related questions', 'course': 'data-engineering-zoomcamp'}),\n",
+       " PointStruct(id=2, vector=Document(text=\"Yes, even if you don't register, you're still eligible to submit the homeworks.\\nBe aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\", model='jinaai/jina-embeddings-v2-small-en', options=None), payload={'text': \"Yes, even if you don't register, you're still eligible to submit the homeworks.\\nBe aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\", 'section': 'General course-related questions', 'course': 'data-engineering-zoomcamp'}),\n",
+       " PointStruct(id=3, vector=Document(text=\"You don't need it. You're accepted. You can also just start learning and submitting homework without registering. It is not checked against any registered list. Registration is just to gauge interest before the start date.\", model='jinaai/jina-embeddings-v2-small-en', options=None), payload={'text': \"You don't need it. You're accepted. You can also just start learning and submitting homework without registering. It is not checked against any registered list. Registration is just to gauge interest before the start date.\", 'section': 'General course-related questions', 'course': 'data-engineering-zoomcamp'})]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points[:4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "653c4ebf",
+   "metadata": {},
+   "source": [
+    "Finalmente se resume este notebook para un sistema Rag con Vector Search. \n",
+    "[colocar el notebook de rag]()"
    ]
   }
  ],
