--- a/02_Week_vector_search/vector_search_qdrant.ipynb
+++ b/02_Week_vector_search/vector_search_qdrant.ipynb
@@ -21,9 +21,9 @@
    "id": "dc86d417",
    "metadata": {},
    "source": [
-    "Primero asegúrate de correr e instalar las dependencias necesarias\n",
+    "Primero asegúrate de correr e instalar las dependencias necesarias.\n",
     "Y dejar el contenedor corriendo. <p>\n",
-    "Setup: [set_up_qdrant]()"
+    "Setup: [set_up_qdrant](02_Week_vector_search/set_up_qdrant.md)"
    ]
   },
   {
@@ -31,7 +31,8 @@
    "id": "8de8b4e1",
    "metadata": {},
    "source": [
-    "Importación de librerías\n",
+    "Importación de librerías <p>\n",
+    "Librería oficial `qdrant_client` que se conecta al servidor de Qdrant. Permite crear colecciones, hacer búsquedas, etc.\n",
     "- Clase `QdrantClient`: permite establecer conexión con el servicio de Qdrant.\n",
     "- Módulo `models`: permite establecer configuraciones y parámetros necesarios."
    ]
@@ -39,14 +40,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e2c867a9",
+   "id": "5a9ca8c7",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/codespace/.python/current/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -58,12 +59,33 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "50d56c3f",
+   "id": "5b8b65ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inicializamos el cliente\n",
-    "client = QdrantClient(\"http://localhost:6333\")"
+    "cliente = QdrantClient(\"http://localhost:6333\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "50d56c3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<qdrant_client.qdrant_client.QdrantClient at 0x734390296450>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cliente"
    ]
   },
   {
@@ -91,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "be548526",
    "metadata": {},
    "outputs": [],
@@ -108,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "13cd39bf",
    "metadata": {},
    "outputs": [
@@ -129,8 +151,8 @@
    ],
    "source": [
     "print(f\"Tamaño de documentos:{len(documentos)}\")\n",
-    "print(f\"Data type de documentos:{type(documentos)}\")\n",
-    "print(f\"Data type de dato del primer elemento de documentos:{type(documentos[0])}\")\n",
+    "print(f\"Data type de los documentos:{type(documentos)}\")\n",
+    "print(f\"Data type del primer elemento de documentos:{type(documentos[0])}\")\n",
     "\n",
     "print('\\nCursos del FaQ Zoomcamp:')\n",
     "for i in documentos:\n",
@@ -182,10 +204,11 @@
    "id": "2dcb6bad",
    "metadata": {},
    "source": [
+    "**Conclusión de exploración del Dataset**\n",
     "1. Verificamos que la data se encuentra limpia y fragmentada (chunk, divide la data en pequeñas partes porque es más fácil para los modelos de embeddings procesarla)\n",
     "2. Tenemos que definir\n",
-    "    - Los campos(fields) para semantic_search\n",
-    "    - Campos para almacenar como *metadata*, pueden ser usados como filtros "
+    "    - Los campos(fields) para semantic_search.\n",
+    "    - Los Campos para almacenar como *metadata* (payload), pueden ser usados como filtros."
    ]
   },
   {
@@ -212,13 +235,13 @@
    "metadata": {},
    "source": [
     "Los modelos de embeddings como ya lo hemos mencionado permite convertir la data en vectores. Para escoger un 'buen' modelo, depende ciertos factores:\n",
-    "- La tarea, el tipo de dato y sus características. (texto, inglés )\n",
+    "- La tarea que se va a realizar, el tipo de dato y sus características. (texto, inglés )\n",
     "- La evaluación entre la 'precisión de búsqueda' y los 'recursos usados' (embeddings más grandes requieren más almacenamiento y memoria)\n",
     "- El costo de deducir(o inferir) \n",
     "etc\n",
     "\n",
     "La mejor manera de escoger el modelo es testear diferentes opciones en tu propia data. <p>\n",
-    "En este caso, vamos a utilizar FastEmbed. <p>\n",
+    "En este caso, vamos a utilizar FastEmbed, como el proveedror del embedding. <p>\n",
     "Documentación: [FastEmbed](https://github.com/qdrant/fastembed).\n"
    ]
   },
@@ -315,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "66d4bf95",
    "metadata": {},
    "outputs": [
@@ -391,16 +414,16 @@
     "- Para texto pero para lenguaje Chino, descartado\n",
     "\n",
     "El modelo 2: `Qdrant/clip-ViT-B-32-text`\n",
-    "- Multimoda, Para texto e imágenes, pero no es necesario impágenes, descartado\n",
+    "- Multimodal, Para texto e imágenes, pero no es necesario imágenes, descartado\n",
     "\n",
     "El modelo 3: `jinaai/jina-embeddings-v2-small-en`\n",
-    "- El más adecuado descartando los previos\n",
+    "- El más adecuado descartando los previos y priorizando recursos es este modelo.\n",
     "- [Documentación del modelo usado para embedding](https://huggingface.co/jinaai/jina-embeddings-v2-small-en)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "cfa0e0e8",
    "metadata": {},
    "outputs": [],
@@ -442,27 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "49785bb6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from qdrant_client import QdrantClient, models\n",
     "# client = QdrantClient(url=\"http://localhost:6333\")\n",
     "\n",
     "nombre_coleccion= 'zoomcamp-rag'\n",
-    "client.create_collection(\n",
+    "cliente.create_collection(\n",
     "    collection_name= nombre_coleccion, \n",
     "    vectors_config=models.VectorParams(\n",
     "        size= dimension, \n",
@@ -483,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "3c32e861",
    "metadata": {},
    "outputs": [
@@ -493,7 +505,7 @@
        "'jinaai/jina-embeddings-v2-small-en'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,12 +519,12 @@
    "id": "cc7b77ea",
    "metadata": {},
    "source": [
-    "Creación de puntos"
+    "#### Creación de puntos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "b570feda",
    "metadata": {},
    "outputs": [],
@@ -539,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "7d2a0e4b",
    "metadata": {},
    "outputs": [
@@ -552,7 +564,7 @@
        " PointStruct(id=3, vector=Document(text=\"You don't need it. You're accepted. You can also just start learning and submitting homework without registering. It is not checked against any registered list. Registration is just to gauge interest before the start date.\", model='jinaai/jina-embeddings-v2-small-en', options=None), payload={'text': \"You don't need it. You're accepted. You can also just start learning and submitting homework without registering. It is not checked against any registered list. Registration is just to gauge interest before the start date.\", 'section': 'General course-related questions', 'course': 'data-engineering-zoomcamp'})]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,11 +575,124 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c75572c",
+   "metadata": {},
+   "source": [
+    "#### Embeding de los puntos y su carga en la colección"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de0ab0a4",
+   "metadata": {},
+   "source": [
+    "FastEmbed realiza:\n",
+    "1. Busca y Descarga el modelo seleccionado.\n",
+    "2. Realiza la inferencia del modelo localmente para generar los embeddigns, es decir, trasnforma los textos(o el tipo de dato) en vectores densos en tu propia máquina.\n",
+    "\n",
+    "Luego, el modelo descargado se guarda en una carpeta temporal: `os.path.join(tempfile.gettempdir(), \"fastembed_cache\")`\n",
+    "\n",
+    "Por último, los puntos generados serán insertados en la colección, los vectores se almacenan e indexan, es decir, Qdrant construye estructuras internas (usa índices) para acelerar las búsquedas por similitud."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "83ba2891",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 5 files: 100%|██████████| 5/5 [00:01<00:00,  4.58it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult(operation_id=0, status=<UpdateStatus.COMPLETED: 'completed'>)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Función que inserta o actualiza un punto en un colección dada.\n",
+    "# Como ya se realizó el embedding, entonces: los vectores se insertan en la colección\n",
+    "cliente.upsert(\n",
+    "    collection_name= nombre_coleccion, \n",
+    "    points= points\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86e42a17",
+   "metadata": {},
+   "source": [
+    "- La velocidad depende del tiempo que tarda en generarse el embedding localmente.\n",
+    "- Si se desea mejorar el rendimiento, se puede usar GPU o dividir los datos en bloques más pequeños. (batch)\n",
+    "\n",
+    "- El cliente Python de Qdrant tambien ofrece herramientas para cargas más eficientes\n",
+    "    - Paralelización, divide el trabajo en varios hilos de ejecución.\n",
+    "    - Retries, si una parte de la carga falla, se intenta de nuevo automáticamente.\n",
+    "    - Lazy Batch, carga los datos de manera **progresiva**.\n",
+    "\n",
+    "    Se puede configurar a través de funciones como `upload_collection`y `upload_points`\n",
+    "\n",
+    "NOTA:\n",
+    "- Cuando se menciona que realiza la inferencia del modelo localmente, se usa los recursos del entorno donde se ejecuta el código. \n",
+    "    - Si usas Codeespaces, el procesamiento ocurre en la CPU de ese entorno virtual. \n",
+    "    - Si ejecutas localmente, puedes usar tu CPU o GPU."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "653c4ebf",
    "metadata": {},
    "source": [
     "Finalmente se resume este notebook para un sistema Rag con Vector Search. \n",
     "[colocar el notebook de rag]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c4113bf",
+   "metadata": {},
+   "source": [
+    "### Visualizamos la data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "227f1811",
+   "metadata": {},
+   "source": [
+    "Visualizamos en http://127.0.0.1:6333/dashboard que los puntos se han cargado correctamente a la colección.\n",
+    "\n",
+    "![image](../images/qdrant_points.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5714ca32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "point0 = [-0.06846455,-0.04079098,0.04998121,0.05953207,0.02933503,-0.015929399,0.046961505,0.06538723,0.003488543,-0.015097292,0.048925813,-0.0060791555,-0.027737234,-0.082000785,0.067399435,-0.03667675,-0.017798426,-0.05546964,-0.011083759,-0.059245612,-0.01734143,-0.023021186,0.015785128,-0.047465812,0.08469293,-0.07854722,-0.062078092,-0.01616355,0.044779766,0.04820736,-0.07802162,0.028787674,-0.04700659,0.026947334,-0.050882373,-0.013185016,0.015569529,-0.012027329,-0.05219849,-0.008115267,0.0039030625,0.012026171,0.096187785,0.019105598,-0.08532845,0.016041769,-0.12907879,0.03177611,0.046240654,-0.017777966,-0.09415709,0.068062514,-0.07555266,0.033081416,0.017123973,0.048179854,-0.016965523,0.036041234,-0.04909715,0.0009031768,0.036679734,0.047277514,-0.06367788,0.053598642,-0.010017119,0.008679631,-0.015747407,-0.03991325,-0.08742591,0.007980874,-0.062224712,-0.007586727,0.048600078,-0.041982602,-0.02641015,-0.0108378995,0.014251434,0.07726208,0.034729958,-0.07207553,-0.041352477,-0.004289862,-0.017731683,0.021234196,0.042140972,-0.041702453,0.01043983,-0.054240156,0.05641359,-0.023290005,0.031706795,0.042014815,-0.010930889,-0.07237952,-0.023633372,-0.053142164,0.0217434,0.05712637,-0.03769596,0.017471848,0.076294586,0.030541813,0.047872223,-0.011048115,0.051555168,0.047350787,-0.029633446,0.007204855,-0.07369298,0.0053200284,0.00047469273,-0.031068329,-0.05281302,0.00011001974,-0.05715111,0.036929853,0.047898438,-0.034192286,-0.038603164,0.0012595165,0.021036096,-0.036125384,-0.038078148,0.04964084,-0.0019360166,0.092187226,-0.033500366,0.05946749,-0.049220525,0.020673933,0.026736183,-0.011286157,-0.012633905,0.034094695,0.09243209,-0.044824604,0.067852296,0.005230769,-0.043324582,0.0326701,-0.07083062,-0.07350883,0.035534248,-0.028113633,0.0042481325,-0.010582569,0.06721547,-0.0029941825,-0.082357585,0.016373903,-0.011697521,0.07866877,-0.069168895,0.004006742,0.012269915,0.061980236,-0.058333274,0.048925027,0.04807169,-0.013165262,-0.022790764,0.07620942,0.03150959,-0.045987464,-0.008834633,-0.017472077,0.050445825,0.096268214,-0.07693184,-0.04384895,0.05261315,0.04313614,-0.07530779,-0.028021747,-0.09744583,-0.0456735,-0.088905334,0.019299489,-0.04767698,-0.0062190657,0.02044807,-0.07267836,-0.012655318,-0.0074797776,0.05128296,-0.021277074,0.007179788,0.017500546,0.03469068,-0.013120194,-0.016424904,0.002570067,-0.018130176,-0.05365371,-0.038270224,0.021411382,-0.046379164,0.05169756,0.0055525657,0.057790566,-0.019270431,0.06789005,-0.051545687,0.035307214,-0.024598971,0.034399897,-0.042949785,-0.00072331517,-0.048362836,-0.021057468,0.026094275,0.01719914,0.04906317,0.042736348,0.015886677,-0.0319091,-0.023131017,-0.022875361,0.01168348,-0.020664124,-0.020896148,0.016738303,0.045422535,0.07809989,-0.024266856,-0.04021694,0.017426668,0.013126395,0.018031772,-0.032305673,0.06620039,-0.030044101,-0.061852973,0.04409456,-0.0013827834,-0.008123868,-0.062819116,0.009788026,-0.043744937,-0.022317797,0.013982544,-0.009391313,0.05777376,0.0056858296,0.006999598,0.051866222,0.08112772,-0.03211696,-0.014601235,0.051587325,-0.033394538,0.006251865,-0.02605619,-0.11607331,-0.03186099,-0.001830986,0.012611519,0.047521453,-0.06919611,-0.03669991,0.005067096,0.017590128,-0.0024427695,0.061980624,0.00036908867,-0.004623333,-0.07887929,0.011967962,0.0718314,0.031925008,0.0062191533,-0.0033358978,0.0042404267,-0.049064558,-0.051003937,0.020293929,0.100239545,0.013767938,0.053953223,0.01843254,-0.026519785,-0.0031231164,-0.019045293,0.0010680228,0.04564501,0.00037686384,0.028409585,0.10355358,0.06982884,-0.02672189,0.044619665,-0.064097665,0.003990987,-0.0111137815,-0.021073764,0.061923493,0.052377548,0.01955624,-0.028693138,0.039254162,0.015581164,0.058836136,-0.03566541,-0.023852238,-0.0051716855,-0.021046694,0.0080006905,-0.008078646,-0.027421946,-0.025896192,0.013928459,-0.05265044,-0.019074516,-0.03149301,0.104708456,0.0026111465,0.07026169,-0.05094832,-0.055254307,0.020221505,-0.008162812,-0.035821173,0.05105494,-0.008516431,0.0736255,0.028627165,-0.017882999,-0.009987374,-0.011698008,-0.009398558,-0.039583806,0.00023758937,-0.020182908,-0.06597895,0.011178861,0.028148144,-0.039861064,-0.07757265,0.018471897,-0.049426984,0.010314243,0.0016298265,-0.015689451,0.05818405,-0.01033787,-0.035027515,0.043765463,-0.049420983,-0.0012114503,-0.030989831,-0.011108377,-0.012850253,-0.008305117,-0.009329814,-0.08785244,0.0295374,-0.008934541,-0.052078355,-0.022266218,0.07041339,-0.03535433,-0.04631689,0.00049170037,0.05206268,0.044059668,-0.064169504,-0.0075818244,-0.039646078,0.04816145,0.025753438,0.066256434,0.02392793,-0.0014395157,-0.055448893,0.0774787,-0.04476011,0.07376837,-0.019379685,0.002074907,-0.009686819,0.03356516,0.047324013,0.0240729,-0.08877777,-0.029460974,0.017622225,0.007672302,0.04154311,0.05078199,0.013701026,-0.04542855,0.0010764489,-0.038460173,0.010578302,0.071165934,-0.0664418,0.04237818,0.09094239,-0.028146256,0.048653405,0.011822472,0.025828037,0.006957286,-0.041415196,-0.0051618293,-0.03555297,-0.028979542,-0.011790992,0.01478175,0.031408973,0.076069415,0.015369002,-0.029704671,0.00070513925,-0.019976554,-0.062294096,-0.076489136,-0.027384093,-0.0062666847,-0.03842202,0.07155313,0.0072336164,-0.00017629948,0.035562843,0.019044492,0.0264928,0.059922483,0.029047942,0.096643895,0.036563784,-0.0030461065,-0.075327285,-0.021391813,0.030066991,-0.027541919,0.035406668,-0.01854306,-0.09680553,0.044650104,-0.0512637,0.11263255,-0.07472632,0.015884997,0.02215685,0.03264856,0.08575658,0.03931488,-0.022300024,-0.056622356,0.039849196,0.038847793,0.05718303,-0.042184196,0.0549666,-0.010088292,-0.008836064,0.0017232867,-0.054012682,0.028496502,0.005257831,0.016796969,-0.0045466716,-0.06623094,0.0477976,0.023841254,-0.04322845,0.045566298,0.0049065305,0.027864464,-0.013733251,-0.028829677,-0.090087034,-0.008853928,0.037266787,0.0709196,0.012089919,0.027770372,0.054197427,-0.04066651,0.053871714,-0.06475711,-0.042422544,-0.0326029,-0.09350322,-0.07054656,-0.001336374,-0.00053008,0.031627476,0.029887548,0.018675564,-0.083593234,-0.055582605,-0.019292016,-0.038321942,-0.066263385,0.022892514,0.042859234,-0.022188779,0.035908688,0.038745336,0.051241525,-0.02861519,0.04351435,-0.0076541263,-0.040348075,0.016487429,0.00911212,-0.06777497,-0.10825469,0.06578071,0.02872077,-0.011152153]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1500abfd",
+   "metadata": {},
+   "source": [
+    "## Similarity Search"
    ]
   }
  ],
