--- a/02_Week_vector_search/vector_search_qdrant.ipynb
+++ b/02_Week_vector_search/vector_search_qdrant.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5a9ca8c7",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "5b8b65ab",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "be548526",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "13cd39bf",
    "metadata": {},
    "outputs": [
@@ -139,8 +139,8 @@
      "output_type": "stream",
      "text": [
       "Tamaño de documentos:3\n",
-      "Data type de documentos:<class 'list'>\n",
-      "Data type de dato del primer elemento de documentos:<class 'dict'>\n",
+      "Data type de los documentos:<class 'list'>\n",
+      "Data type del primer elemento de documentos:<class 'dict'>\n",
       "\n",
       "Cursos del FaQ Zoomcamp:\n",
       "- data-engineering-zoomcamp\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "4f0178f3",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "  'tasks': {}}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "66d4bf95",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "cfa0e0e8",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "3c32e861",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "'jinaai/jina-embeddings-v2-small-en'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "b570feda",
    "metadata": {},
    "outputs": [],
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "7d2a0e4b",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "PointStruct(id=0, vector=Document(text=\"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\", model='jinaai/jina-embeddings-v2-small-en', options=None), payload={'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\", 'section': 'General course-related questions', 'course': 'data-engineering-zoomcamp'})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "5714ca32",
    "metadata": {},
    "outputs": [
@@ -741,22 +741,178 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6923ae50",
+   "id": "4ba0594b",
    "metadata": {},
    "source": [
-    "Ahora vamos a encontrar el vector `text` (la respuesta de las querys) in Qdrant dada una query. Nos tiene que devolver la respuesta que más acerca a dicha query."
+    "### Búsqueda por Similitud en Qdrant\n",
+    "\n",
+    "**¿Qué realiza?** <p>\n",
+    "Permite encontrar el vector de texto (en este caso `text`, que son las respuestas de las querys) más similar dada una query. Lo realiza mediante comparación de embeddings en el espacio vectorial.\n",
+    "Nos tiene que devolver el vector(la respuesta) más cercana a dicha query.\n",
+    "\n",
+    "**¿Cómo funciona la búsqueda por similitud?**\n",
+    "1. Se genera el embedding de la query usando el mismo modelo seleccionado para los datos.\n",
+    "2. Qdrant compara este vector(el query ya con el embedding) con los vectores almacenados(vector index) en la colección usando la métrica de distancia indicada (Cosine) cuando se creó la colección.\n",
+    "2. El resultados son los puntos(vectores) más cercanos en el espacio vectorial, ordenados bajo un ranking de similitud.\n",
+    "\n",
+    "**Qué hace posible esta búsqueda eficiente?**    \n",
+    "- Vector Index (índice de vectores):\n",
+    "     Al insertar datos en Qdrant, se crea un índice vectorial, normalmente basado en ANN(Aproximate Nearest Neighbors)\n",
+    "\n",
+    "- ANNN Search:\n",
+    "    Técnica para encontrar puntos de datos similares a una consulta en espacio vectorial de alta dimensionalidad.\n",
+    "    - A diferencia de NN, que busca el vecino más cercano absoluto, esta búsqueda busca el aproximado. \n",
+    "    - Por ello, su característica es que prioriza la velocidad sobre la precisión.\n",
+    "    \n",
+    "    Los vectores indexados son generados por ANN(nearest neighbor) search.\n",
+    "\n",
+    "Definamos la función de búsqueda:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27dc6bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(query, limit= 1):\n",
+    "    results = cliente.query_points(\n",
+    "        collection_name= nombre_coleccion,\n",
+    "        query = models.Document( #realiza el embedding de la query localmente con el modelo elegido\n",
+    "            text= query, \n",
+    "            model = modelo_seleccionado\n",
+    "        ),\n",
+    "        limit = limit, # cantidad de respuestas\n",
+    "        with_payload=True  # para obtener la metada en los resultados \n",
+    "    )\n",
+    "    return results\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4ba0594b",
+   "id": "800fa6eb",
    "metadata": {},
    "source": [
-    "**¿Cómo funciona la búsqueda por Similitud?**\n",
-    "\n",
-    "1. \n",
-    "2. "
+    "Ahora escogemos una pregunta de manera aleatorio de la data.\n",
+    "Recordar: No se ha cargado las preguntas(query) a Qdrant."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "062cc819",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "random_course= random.choice(documentos)\n",
+    "course_document_element= random.choice(random_course['documents'])\n",
+    "random_question = course_document_element['question']\n",
+    "\n",
+    "curso= random_course['course']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eb7fe5a",
+   "metadata": {},
+   "source": [
+    "Entonces, la pregunta y el curso de manera aleatoria son:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "7c82e9ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Curso: data-engineering-zoomcamp\n",
+      "Pregunta aleatoria: GCP BQ - Can I use BigQuery for real-time analytics in this project?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Curso: {curso}')\n",
+    "print(f'Pregunta aleatoria: {random_question}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20705d6a",
+   "metadata": {},
+   "source": [
+    "Usamos la función de búsqueda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "3d2bc444",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 5 files: 100%|██████████| 5/5 [00:01<00:00,  4.20it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "QueryResponse(points=[ScoredPoint(id=210, version=0, score=0.8856798, payload={'text': 'Ans :  While real-time analytics might not be explicitly mentioned, BigQuery has real-time data streaming capabilities, allowing for potential integration in future project iterations.', 'section': 'Module 3: Data Warehousing', 'course': 'data-engineering-zoomcamp'}, vector=None, shard_key=None, order_value=None)])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado= search(random_question)\n",
+    "resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "85b52ed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ScoredPoint(id=210, version=0, score=0.8856798, payload={'text': 'Ans :  While real-time analytics might not be explicitly mentioned, BigQuery has real-time data streaming capabilities, allowing for potential integration in future project iterations.', 'section': 'Module 3: Data Warehousing', 'course': 'data-engineering-zoomcamp'}, vector=None, shard_key=None, order_value=None)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado.points[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfef2193",
+   "metadata": {},
+   "source": [
+    "Comparemos con la respuesta de la pregunta aleatoria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3511609",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
